# krug_test_task

./: CMakeLists.txt  README.md  Тестовое задание - Инженер-программист С++ СРВК.DOCX
common/: CMakeLists.txt
common/src/: semworker.cpp  shmemworker.cpp  threadworker.cpp
common/src/headers/: semworker.h  shmemworker.h  threadworker.h
prog1/: CMakeLists.txt
prog1/src/: main.cpp
prog2/: CMakeLists.txt
prog2/src/: main.cpp  threadfuncs.cpp  threads.cpp
prog2/src/headers/: threadfuncs.h  threads.h
