project(TestTaskCommon VERSION ${VERSION_MAJOR}.${VERSION_MINOR})

set(SOURCES_DIR src)
set(PROJ_HEADERS_DIR ${SOURCES_DIR}/headers)

file(GLOB SRC_FILES ${SOURCES_DIR}/*.cpp)

set(TARGET_NAME TestTaskCommon)
add_library(${TARGET_NAME} SHARED ${SRC_FILES})
set_target_properties(${TARGET_NAME} PROPERTIES
  OUTPUT_NAME ${TARGET_NAME}-${VERSION_MAJOR}.${VERSION_MINOR}
)

target_include_directories(${TARGET_NAME} PUBLIC ${PROJ_HEADERS_DIR})

install(TARGETS ${TARGET_NAME} DESTINATION ${LIBRARY_DEPLOY_DIR})
